Evaluate DLS extensions earlier